--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -16,9 +16,6 @@
 name: system-tests
 
 on:
-  # Run every day at 00:00
-  schedule:
-    - cron: "0 0 * * *"
   push:
     paths:
       - '.github/workflows/system-tests.yml'
@@ -69,6 +66,7 @@ jobs:
           distribution: zulu
           java-version: 17
           cache: 'maven'
+          
       - name: Build Dependencies
         env:
           MAVEN_OPTS: >-
@@ -77,101 +75,22 @@ jobs:
           ${{ env.MAVEN_COMMAND }}
           ${{ env.MAVEN_BUILD_ARGUMENTS }}
           ${{ env.MAVEN_PROJECTS }}
-      - name: Run Tests
+          
+      - name: Compile Module Where Test Is
         env:
           MAVEN_OPTS: >-
             ${{ env.DEFAULT_MAVEN_OPTS }}
-        run: >
-          ${{ env.MAVEN_COMMAND }}
-          ${{ env.MAVEN_RUN_ARGUMENTS }}
-          ${{ env.MAVEN_PROJECTS }}
-      - name: Upload Troubleshooting Logs
-        if: failure() || cancelled()
-        uses: actions/upload-artifact@v2
-        with:
-          name: ubuntu-17-troubleshooting-logs
-          path: |
-            nifi-system-tests/nifi-system-test-suite/target/failsafe-reports/**/*.txt
-            nifi-system-tests/nifi-system-test-suite/target/surefire-reports/**/*.txt
-            nifi-system-tests/nifi-system-test-suite/target/troubleshooting/**/*
-          retention-days: 7
-
-  ubuntu:
-    timeout-minutes: 120
-    runs-on: ubuntu-latest
-    name: Ubuntu Java 11
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Set up Java 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: zulu
-          java-version: 11
-          cache: 'maven'
-      - name: Build Dependencies
+        run: mvn test-compile -pl nifi-nar-bundles/nifi-scripting-bundle/nifi-scripting-processors -am
+        
+      - name: Check that test passes
         env:
           MAVEN_OPTS: >-
             ${{ env.DEFAULT_MAVEN_OPTS }}
-        run: >
-          ${{ env.MAVEN_COMMAND }}
-          ${{ env.MAVEN_BUILD_ARGUMENTS }}
-          ${{ env.MAVEN_PROJECTS }}
-      - name: Run Tests
+        run: mvn -pl nifi-nar-bundles/nifi-scripting-bundle/nifi-scripting-processors test -Dtest=org.apache.nifi.processors.script.TestScriptedPartitionRecord#testWhenMultiplePartitions
+        
+      - name: Check that test is flaky
         env:
           MAVEN_OPTS: >-
             ${{ env.DEFAULT_MAVEN_OPTS }}
-        run: >
-          ${{ env.MAVEN_COMMAND }}
-          ${{ env.MAVEN_RUN_ARGUMENTS }}
-          ${{ env.MAVEN_PROJECTS }}
-      - name: Upload Troubleshooting Logs
-        if: failure() || cancelled()
-        uses: actions/upload-artifact@v2
-        with:
-          name: ubuntu-latest-troubleshooting-logs
-          path: |
-            nifi-system-tests/nifi-system-test-suite/target/failsafe-reports/**/*.txt
-            nifi-system-tests/nifi-system-test-suite/target/surefire-reports/**/*.txt
-            nifi-system-tests/nifi-system-test-suite/target/troubleshooting/**/*
-          retention-days: 7
-
-  macos:
-    timeout-minutes: 120
-    runs-on: macos-latest
-    name: MacOS Java 8
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Set up Java 8
-        uses: actions/setup-java@v2
-        with:
-          distribution: zulu
-          java-version: 8
-          cache: 'maven'
-      - name: Build Dependencies
-        env:
-          MAVEN_OPTS: >-
-            ${{ env.DEFAULT_MAVEN_OPTS }}
-        run: >
-          ${{ env.MAVEN_COMMAND }}
-          ${{ env.MAVEN_BUILD_ARGUMENTS }}
-          ${{ env.MAVEN_PROJECTS }}
-      - name: Run Tests
-        env:
-          MAVEN_OPTS: >-
-            ${{ env.DEFAULT_MAVEN_OPTS }}
-        run: >
-          ${{ env.MAVEN_COMMAND }}
-          ${{ env.MAVEN_RUN_ARGUMENTS }}
-          ${{ env.MAVEN_PROJECTS }}
-      - name: Upload Troubleshooting Logs
-        if: failure() || cancelled()
-        uses: actions/upload-artifact@v2
-        with:
-          name: macos-latest-troubleshooting-logs
-          path: |
-            nifi-system-tests/nifi-system-test-suite/target/failsafe-reports/**/*.txt
-            nifi-system-tests/nifi-system-test-suite/target/surefire-reports/**/*.txt
-            nifi-system-tests/nifi-system-test-suite/target/troubleshooting/**/*
-          retention-days: 7
+        run: mvn -pl nifi-nar-bundles/nifi-scripting-bundle/nifi-scripting-processors edu.illinois:nondex-maven-plugin:1.1.2:nondex -Dtest=org.apache.nifi.processors.script.TestScriptedPartitionRecord#testWhenMultiplePartitions
+          
