--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -56,15 +56,15 @@ jobs:
   ubuntu-17:
     timeout-minutes: 120
     runs-on: ubuntu-latest
-    name: Ubuntu Java 17
+    name: Nifi Test SWE437
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Set up Java 17
+      - name: Set up Java 8
         uses: actions/setup-java@v2
         with:
           distribution: zulu
-          java-version: 17
+          java-version: 8
           cache: 'maven'
           
       - name: Build Dependencies
